# rknpu

./: .gitignore  cmds.txt
rknn/rknn_api/examples/rknn_yolov5_demo/: CMakeLists.txt  build.sh
rknn/rknn_api/examples/rknn_yolov5_demo/include/: postprocess.h  rga_func.h
rknn/rknn_api/examples/rknn_yolov5_demo/src/: main.cc  postprocess.cc  rga_func.c
rknn/rknn_api/examples/rknn_zero_copy_demo/include/: postprocess.h
